# coop_sim_framework

./: README.md
simulator/dsrc/: CMakeLists.txt  package.xml
simulator/dsrc/src/: dsrc_system.py
simulator/launch/: lead_ego_1.launch  lead_ego_2.launch  lead_ego_3.launch  lead_ego_4.launch  multi_vehicle_1.launch
simulator/vehicle/: CMakeLists.txt  package.xml
simulator/vehicle/msg/: control_input.msg  vehicle_data.msg
simulator/vehicle/src/: vehicle_dynamics.py  vehicle_system.py
