<?xml version="1.0"?>
<package>
  <name>vehicle</name>
  <version>0.0.0</version>
  <description>The vehicle package</description>

  <maintainer email="massera@icmc.usp.br">Carlos Massera</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

</package>
